# starry-next

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  build_img.sh  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.arceos/: Cargo.toml
.arceos/modules/axusb/: Cargo.toml
.arceos/ulib/axlibc/: Cargo.toml
.devcontainer/: Dockerfile
.github/workflows/: ci.yml  docs.yml
api/: Cargo.toml
api/src/: lib.rs  path.rs  ptr.rs  signal.rs  sockaddr.rs  time.rs
api/src/file/: fs.rs  mod.rs  net.rs  pipe.rs  stdio.rs
api/src/imp/: futex.rs  mod.rs  signal.rs  sys.rs  time.rs
api/src/imp/fs/: ctl.rs  fd_ops.rs  io.rs  mod.rs  mount.rs  pipe.rs  stat.rs
api/src/imp/mm/: brk.rs  mmap.rs  mod.rs
api/src/imp/task/: clone.rs  execve.rs  exit.rs  mod.rs  schedule.rs  thread.rs  wait.rs
api/src/imp/utils/: time.rs
apps/junior/: Makefile  testcase_list
apps/libc/: Makefile  expect_off.out  test_cmd  testcase_list
apps/nimbos/: Makefile  expect_off.out  test_cmd  testcase_list
apps/nimbos/c/: CMakeLists.txt
apps/nimbos/rust/: Cargo.toml  Makefile  rust-toolchain.toml
apps/oscomp/: .gitignore  Makefile  README.md  judge_basic.py  judge_busybox.py  judge_iozone.py  judge_libctest.py  judge_lua.py  testcase_list
apps/tests/: fork.c  prlimit64.c  sysinfo.c  testcase_list
configs/: aarch64.toml  dummy.toml  loongarch64.toml  riscv64.toml
core/: Cargo.toml
core/src/: ctypes.rs  entry.rs  futex.rs  lib.rs  mm.rs  task.rs  time.rs
scripts/: app_test.sh  config.toml.temp  get_deps.sh  oscomp_test.sh
scripts/make/: oscomp.mk
search.desc/starry/: starry-desc-0-.js
search.desc/starry_api/: starry_api-desc-0-.js
search.desc/starry_core/: starry_core-desc-0-.js
src/: ctypes.rs  entry.rs  loader.rs  main.rs  mm.rs  ptr.rs  syscall.rs  task.rs
src/starry/: entry.rs.html  main.rs.html  mm.rs.html  syscall.rs.html
src/starry_api/: lib.rs.html  path.rs.html  ptr.rs.html  signal.rs.html  sockaddr.rs.html  time.rs.html
src/starry_api/file/: fs.rs.html  mod.rs.html  net.rs.html  pipe.rs.html  stdio.rs.html
src/starry_api/imp/: futex.rs.html  mod.rs.html  signal.rs.html  sys.rs.html  time.rs.html
src/starry_core/: futex.rs.html  lib.rs.html  mm.rs.html  task.rs.html  time.rs.html
src/syscall_imp/: mod.rs  signal.rs  sys.rs  user.rs
src/syscall_imp/fs/: ctl.rs  fd_ops.rs  io.rs  mod.rs  pipe.rs  stat.rs
src/syscall_imp/mm/: brk.rs  mmap.rs  mod.rs
src/syscall_imp/task/: schedule.rs  thread.rs
src/syscall_imp/utils/: mod.rs  system_info.rs  time.rs
starry/: all.html  fn.main.html  index.html  sidebar-items.js
starry/entry/: fn.run_user_app.html  index.html  sidebar-items.js
starry/mm/: fn.handle_page_fault.html  index.html  sidebar-items.js  static._LINKME_ELEMENT_handle_page_fault.html
starry/syscall/: fn.handle_syscall.html  index.html  sidebar-items.js  static._LINKME_ELEMENT_handle_syscall.html
starry_api/: all.html  enum.FileType.html  fn.check_mounted.html  fn.do_exit.html  fn.mount_fat_fs.html  fn.sys_arch_prctl.html  fn.sys_brk.html  fn.sys_chdir.html  fn.sys_clock_gettime.html  fn.sys_clone.html  fn.sys_close.html  fn.sys_dup.html  fn.sys_dup2.html  fn.sys_execve.html  fn.sys_exit.html  fn.sys_exit_group.html  fn.sys_fcntl.html  fn.sys_fork.html  fn.sys_fstat.html  fn.sys_fstatat.html  fn.sys_futex.html  fn.sys_getcwd.html  fn.sys_getdents64.html  fn.sys_getegid.html  fn.sys_geteuid.html  fn.sys_getgid.html  fn.sys_getpid.html  fn.sys_getppid.html  fn.sys_gettid.html  fn.sys_gettimeofday.html  fn.sys_getuid.html  fn.sys_ioctl.html  fn.sys_kill.html  fn.sys_link.html  fn.sys_linkat.html  fn.sys_lseek.html  fn.sys_lstat.html  fn.sys_mkdirat.html  fn.sys_mmap.html  fn.sys_mount.html  (+35 more)
starry_api/file/: constant.AX_FILE_LIMIT.html  enum.Socket.html  fn.add_file_like.html  fn.close_file_like.html  fn.get_file_like.html  fn.init_stdio.html  index.html  sidebar-items.js  struct.Directory.html  struct.FD_TABLE.html  struct.File.html  struct.Kstat.html  struct.Pipe.html  trait.FileLike.html
starry_api/file/fs/: struct.Directory.html  struct.File.html
starry_api/file/net/: enum.Socket.html
starry_api/file/pipe/: struct.Pipe.html
starry_api/imp/futex/: fn.sys_futex.html
starry_api/imp/signal/: fn.sys_kill.html  fn.sys_rt_sigaction.html  fn.sys_rt_sigpending.html  fn.sys_rt_sigprocmask.html  fn.sys_rt_sigqueueinfo.html  fn.sys_rt_sigreturn.html  fn.sys_rt_sigsuspend.html  fn.sys_rt_sigtimedwait.html  fn.sys_rt_tgsigqueueinfo.html  fn.sys_sigaltstack.html  fn.sys_tgkill.html  fn.sys_tkill.html
starry_api/imp/sys/: fn.sys_getegid.html  fn.sys_geteuid.html  fn.sys_getgid.html  fn.sys_getuid.html  fn.sys_uname.html
starry_api/imp/time/: fn.sys_clock_gettime.html  fn.sys_gettimeofday.html  fn.sys_times.html  struct.Tms.html
starry_api/path/: enum.LinkError.html  fn.handle_file_path.html  index.html  sidebar-items.js  static.HARDLINK_MANAGER.html  struct.FilePath.html  struct.HardlinkManager.html
starry_api/ptr/: index.html  sidebar-items.js  struct.UserConstPtr.html  struct.UserPtr.html
starry_api/signal/: fn.check_signals.html  fn.send_signal_process.html  fn.send_signal_process_group.html  fn.send_signal_thread.html  index.html  sidebar-items.js
starry_api/sockaddr/: index.html  struct.SockAddr.html
starry_api/time/: index.html  sidebar-items.js  trait.TimeValueLike.html
starry_core/: all.html  index.html  sidebar-items.js
starry_core/futex/: index.html  sidebar-items.js  struct.FutexTable.html
starry_core/mm/: fn.access_user_memory.html  fn.copy_from_kernel.html  fn.is_accessing_user_memory.html  fn.load_user_app.html  fn.map_trampoline.html  fn.new_user_aspace_empty.html  index.html  sidebar-items.js
starry_core/task/: fn.add_thread_to_table.html  fn.get_process.html  fn.get_process_group.html  fn.get_session.html  fn.get_thread.html  fn.new_user_task.html  fn.processes.html  fn.time_stat_from_kernel_to_user.html  fn.time_stat_from_user_to_kernel.html  fn.time_stat_output.html  index.html  sidebar-items.js  struct.ProcessData.html  struct.TaskExt.html  struct.ThreadData.html
(+115 files in other folders)
