[package]
name = "starry-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axfeat.workspace = true

axconfig.workspace = true
axfs.workspace = true
axhal.workspace = true
axlog.workspace = true
axmm.workspace = true
axnet.workspace = true
axns.workspace = true
axsync.workspace = true
axtask.workspace = true

axprocess.workspace = true
axsignal.workspace = true

axerrno.workspace = true
bitflags.workspace = true
cfg-if.workspace = true
linkme.workspace = true
linux-raw-sys.workspace = true
memory_addr.workspace = true
spin.workspace = true

starry-core.workspace = true

axio = "0.1.1"
ctor_bare = "0.2.1"
flatten_objects = "0.2.3"
num_enum = { version = "0.7", default-features = false }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"
