[package]
name = "starry-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axconfig.workspace = true
axfs.workspace = true
axhal.workspace = true
axlog.workspace = true
axmm.workspace = true
axns.workspace = true
axsync.workspace = true
axtask.workspace = true

axprocess.workspace = true
axsignal.workspace = true

axerrno.workspace = true
linkme.workspace = true
memory_addr.workspace = true

crate_interface = "0.1"
kernel-elf-parser = "0.3"
numeric-enum-macro = "0.2"
percpu = "0.2.0"
spin = "0.9"
xmas-elf = "0.9"

weak-map = { git = "https://github.com/Starry-OS/weak-map.git" }
